--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,6 +1,7 @@
 version: '3.7'
 services:
   python:
+    env_file: .compose_env
     build: .
     ports:
       - "5000:5000"
@@ -9,9 +10,13 @@ services:
       - redis
     environment:
       - REDIS_HOST=redis
+      - REDIS_PORT=${REDIS_PORT}
     volumes:
       - "./data:/data"
     command: "tail -f /dev/null"
 
   redis:
+    env_file: .compose_env
     image: "redis:alpine"
+    command: >
+        --port ${REDIS_PORT}
